# BWM_REGRESSION_MODEL

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_eda.ipynb  02_FeatEng.ipynb
src/data/: load_data.py  preprocess.py
